# doorstop-reqif

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
doorstop-reqif/: Cargo.toml  README.md
doorstop-reqif/src/: main.rs
doorstop2capella/: Cargo.toml  README.md
doorstop2capella/src/: main.rs
