[package]
name = "doorstop-reqif"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
description= "Application to convert doorstop documents into reqif files"
homepage= "https://github.com/invap/doorstop-reqif"
repository= "https://github.com/invap/doorstop-reqif"
readme= "README.md"
keywords=["Doorstop","Requirements", "Convert","Reqif"]
authors= ["Juan Ignacio Vaccarezza <jivaccarezza@invap.com.ar>"]
documentation= "https://docs.rs/doorstop-reqif"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqif-rs = { version= "0.1.2", path = "../reqif-rs"}
doorstop-rs = { version= "0.1.0", path = "../doorstop-rs" }
chrono = "0.4.37"
clap = {version= "4.5.4", features= [ "derive" ]  }
