[package]
name = "doorstop2capella"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqif-rs = { version= "0.1.2", path = "../reqif-rs"}
doorstop-rs = { version= "0.1.0", path = "../doorstop-rs" }
chrono = "0.4.37"
clap = {version= "4.5.4", features= [ "derive" ]  }
